# distill-gym

./: .gitignore  README.md  Taskfile.yml  pyproject.toml
distill_gym/cache/: __init__.py  cache_store.py  git_cache.py  harness_cache.py
distill_gym/cli/: main.py
distill_gym/collectors/: artifact_collector.py  git_diff.py  test_result.py
distill_gym/config/: loader.py  schema.py
distill_gym/exporters/: __init__.py  chatml.py  merger.py  openai_messages.py
distill_gym/harness/: __init__.py  (+5 more)
examples/: app_idea_generation.yaml  custom_sandbox_opencode.yaml  evolutionary_taskgen.yaml  git_repo_harness_taskgen_opencode.yaml  git_repo_opencode.yaml  mock_run.yaml
tests/: conftest.py  test_cache_extended.py  test_chatml_exporter.py  test_cleanup.py  test_cli.py  test_completion_detection.py  test_config_validation.py  test_container_client.py  test_context_providers.py  test_custom_builder.py  test_docker_client.py  test_eventbus.py  test_evolutionary_taskgen.py  test_execute_steps.py  test_exporter.py  test_git_cache.py  test_harness_adapters.py  test_harness_cache.py  test_harness_taskgen.py  test_lifecycle.py  test_lifecycle_extended.py  test_merger.py  test_mock_run.py  test_normalizer.py  test_orchestrator.py  test_orchestrator_task_proxy.py  test_platform_compat.py  test_platform_detection.py  test_podman_client.py  test_proxy_addressing.py  test_proxy_app.py  test_proxy_streaming.py  test_recorder.py  test_repo_taskgen.py  test_run_store.py  test_runtime_factory.py  test_sandbox_builder.py  test_sandbox_manager.py  test_sandbox_pool.py  test_task_worker.py  (+3 more)
(+73 files in other folders)
