[project]
name = "distill-gym"
version = "0.1.0"
description = "Collect AI harness execution traces and generate SFT datasets"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "aiosqlite>=0.20.0",
]

[project.scripts]
distill-gym = "distill_gym.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
